# telegram-admin-bot

./: .env.sample  .gitignore  .travis.yml  Cargo.toml  README.md  Release.toml  aarch64.sh  arm-eabihf.sh  armv7-eabihf.sh
src/: config.rs  lib.rs  main.rs
src/commands/: admins.rs  forward.rs  health.rs  mod.rs  relay.rs  start.rs  timeout.rs
