[package]
name = "admin_bot"
description = "A telegram bot to assist with administration of chats"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix@tamu.edu>"]
repository = "https://github.com/asonix/telegram-admin-bot"
readme = "README.md"
keywords = ["telegram", "administration"]

[dependencies]
telebot = { git = "https://github.com/asonix/telebot.git", branch = "remove-unwraps" }
tokio-core = "0.1"
futures = "0.1"
dotenv = "0.10"
log = "0.3"
env_logger = "0.3"
