[package]
name = "admin_bot"
description = "A telegram bot to assist with administration of chats"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix@tamu.edu>"]
repository = "https://github.com/asonix/telegram-admin-bot"
documentation = "https://asonix.github.io/asonix/telegram-admin-bot/admin_bot/index.html"
readme = "README.md"
keywords = ["telegram", "administration"]

[dependencies]
telebot = "0.2.5"
tokio-core = "0.1"
futures = "0.1"
dotenv = "0.10"
log = "0.3"
env_logger = "0.3"
